# famly-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
famly/: auth.py  cli.py  client.py  config.py  export.py  gallery.py  media.py  models.py  output.py  photos.py  progress.py
famly/graphql/: Authenticate.graphql  GetChildNotes.graphql  LearningJourneyQuery.graphql  __init__.py
famly/sources/: children.py  events.py  feed.py  messages.py  notes.py  observations.py  profile.py  tagged.py
scripts/: demo.tape  demo_server.py  render_demo.sh
tests/: conftest.py  test_auth.py  test_cli_commands.py  test_cli_smoke.py  test_client.py  test_config.py  test_download.py  test_export.py  test_feed.py  test_fixtures.py  test_gallery.py  test_integration_fixture.py  test_live_smoke.py  test_media.py  test_messages.py  test_observations.py  test_other_sources.py  test_photos.py  test_progress.py
tests/fixtures/: _build_fixtures.py  conversations.json  feed_full.json  me.json  observations_all_variants.json
